feat: Configurando Docker, API e Banco

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,8 +21,18 @@ services:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ConnectionStrings__DefaultConnection=Host=db;Port=5432;Database=${DB_NAME};Username=${DB_USER};Password=${DB_PASSWORD}
+
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:8080/health"]
+      interval: 10s        # Testa a cada 10 segundos
+      timeout: 5s          # Se demorar mais de 5s, falha
+      retries: 3           # Falhou 3x seguidas? Marca como Unhealthy
+      start_period: 10s    # Dá 10s de folga pro container subir antes de começar a testar
+    
     depends_on:
-      - db
+      db:
+        condition: service_started  
+        
     networks:
       - saas-network
 
@@ -34,8 +44,19 @@ services:
     networks:
       - saas-network
 
+  portainer:
+    image: portainer/portainer-ce:latest
+    container_name: portainer
+    restart: always
+    ports:
+      - "9000:9000" # Porta de acesso ao painel
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock # Permite que ele "controle" o Docker do seu PC
+      - portainer_data:/data # Salva suas configurações e senha
+
 volumes:
   pgdata_saas:
+  portainer_data:
 
 networks:
   saas-network:
