feat: Adicionando IA com Semantic Kernel

--- a/backend/SaasApi/appsettings.Development.json
+++ b/backend/SaasApi/appsettings.Development.json
@@ -4,5 +4,12 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=ep-nameless-sunset-aesebapr.c-2.us-east-2.aws.neon.tech;Database=neondb;Username=neondb_owner;Password=npg_cywqet8H6EgL;Ssl Mode=Require;"
+  },
+  "Gemini": {
+    "ApiKey": "AIzaSyBemr25G_xKOss17QEpCqty21pZMsBN6XY",
+    "ModelId": "gemini-flash-latest"
   }
 }
