--- a/backend/SaasApi/appsettings.json
+++ b/backend/SaasApi/appsettings.json
@@ -1,12 +1,16 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Port=5432;Database=postgres;Username=postgres;Password=minhasenha123"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": ""
+  },
+  "Gemini": {
+    "ApiKey": "",
+    "ModelId": "gemini-flash-latest"
+  }
 }
