feat: Implementa Autenticacao JWT completa com Swagger Protegido

--- a/backend/SaasApi/appsettings.json
+++ b/backend/SaasApi/appsettings.json
@@ -9,6 +9,9 @@
   "ConnectionStrings": {
     "DefaultConnection": ""
   },
+  "Jwt": {
+    "Key": ""
+  },
   "Gemini": {
     "ApiKey": "",
     "ModelId": "gemini-flash-latest"
